--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   "homepage": "https://github.com/mbkarle/IdentityInsight#readme",
   "dependencies": {
     "child_process": "^1.0.2",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "forever": "^1.0.0",
+    "morgan": "^1.9.1",
+    "multer": "^1.4.2"
   }
 }
